--- a/src/Components/encrypt/encrypt.css
+++ b/src/Components/encrypt/encrypt.css
@@ -1,8 +1,8 @@
 .function-container{
     display: flex;
     flex-direction: column;
-    flex: 1;
     margin-bottom: 0.5rem;
+    height: 250px;
 }
 
 label{
@@ -31,10 +31,15 @@ button{
     margin-bottom: 0.5rem;
 }
 
-p{
+.output-container{
     display: flex;
-    align-items: center;
-    font-size: 12px;
+    flex-direction: column;
     flex: 1;
-    overflow:scroll;
+    padding: 4px 0 0 4px;
+}
+
+p{
+    font-size: 12px;
+    line-height: 14px;
+    overflow: auto;
 }
