Done with the app for now :)

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
 
 .App{
   background-color: #ccc;
+  background-image: url(../src/Assets/pexels-uzunov-rostislav-5011647.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   height: 100vh;
   width: 100vw;
