--- a/src/Containers/form/form.css
+++ b/src/Containers/form/form.css
@@ -1,10 +1,11 @@
 .form-container{
-    background-color: rgba(255, 255, 255, 0.6);
-    border: 2px solid black;
+    background-color: white;
     border-radius: 10px;
+    box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.15);
+    color: green;
     display: flex;
     flex-direction: column;
-    height: 500px;
+    height: 550px;
     padding: 2rem;
     width: 400px;
 }
@@ -30,6 +31,7 @@ label{
 textarea{
     background: transparent;
     border-radius: 4px;
+    color: green;
     font-size: 14px;
     font-weight: 500;
     height: 4rem;
@@ -39,13 +41,16 @@ textarea{
 }
 
 button{
-    background-color: black;
-    color: #ccc;
+    background-color: green;
+    border: none;
+    color: white;
     cursor: pointer;
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
     margin-bottom: 0.5rem;
+    outline: none;
+    padding: 4px 0;
 }
 
 .output-container{
@@ -59,4 +64,11 @@ p{
     font-size: 12px;
     line-height: 14px;
     word-break: break-all;
+}
+
+
+@media screen and (max-width:500px) {
+    .form-container{
+        width: 80%;
+    }
 }
